<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">newsfeed</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="web">Please select any from below</string>
	<string name="select">Please select your preffered reference</string>
	<string name="self_destruct">Submit</string>
	<string name="TopStories">Top Stories</string>
	<string name="India">India</string>
	<string name="World">World</string>
	<string name="Sports">Sports</string>
</resources>
